# pyradise

./: .coveragerc  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  Makefile  README.md  make.bat  pylintrc  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish_new_version.yml
dev/: dataset_construction.py  image_conversion_alg.py  modality_config_generation.py  modality_extractor.py  segmentation_combination.py  serialize_to_h5.py  transformation.py  validation.py  vtk_rtss_converter.py  vtk_test.py
docs/: acknowledgment.rst  api.rst  change_history.rst  conf.py  examples.rst  index.rst  installation.rst  pyradise.conversion.rst  pyradise.curation.rst  pyradise.data.image.rst  pyradise.data.modality.rst  pyradise.data.organ.rst  pyradise.data.rater.rst  pyradise.data.rst  pyradise.data.subject.rst  pyradise.data.taping.rst  pyradise.fileio.crawling.rst  pyradise.fileio.dicom_conversion.rst  pyradise.fileio.extraction.rst  pyradise.fileio.loading.rst  pyradise.fileio.modality_config.rst  pyradise.fileio.rst  pyradise.fileio.selection.rst  pyradise.fileio.series_info.rst  pyradise.fileio.writing.rst  pyradise.loading.rst  pyradise.process.base.rst  pyradise.process.inference.rst  pyradise.process.intensity.rst  pyradise.process.modification.rst  pyradise.process.orientation.rst  pyradise.process.postprocess.rst  pyradise.process.registration.rst  pyradise.process.resampling.rst  pyradise.process.rst  pyradise.serialization.rst  requirements.txt  tutorials.rst
docs/reference/: pyradise.data.annotator.rst  pyradise.data.image.rst  pyradise.data.modality.rst  pyradise.data.organ.rst  pyradise.data.rater.rst  pyradise.data.rst  pyradise.data.subject.rst  pyradise.data.taping.rst  pyradise.fileio.crawling.rst  pyradise.fileio.dicom_conversion.rst  pyradise.fileio.extraction.rst  pyradise.fileio.loading.rst  pyradise.fileio.modality_config.rst  pyradise.fileio.rst  pyradise.fileio.selection.rst  pyradise.fileio.series_info.rst  pyradise.fileio.writing.rst  pyradise.process.base.rst  pyradise.process.inference.rst  pyradise.process.intensity.rst  pyradise.process.invertibility.rst  pyradise.process.modification.rst  pyradise.process.orientation.rst  pyradise.process.postprocess.rst  pyradise.process.registration.rst  pyradise.process.resampling.rst  pyradise.process.rst
docs/tutorials/: tcia.general.rst  tcia.glisrt.rst
examples/conversion/: dicom_to_nii.ipynb  modality_config_generation.ipynb  nii_to_dicom.ipynb
examples/inference/: basic.ipynb  container.ipynb  network.py
examples/simple_examples/: basic_conversion.py  crawling_series_infos.py  modality_extractor.py  serialize_to_h5.py  subject_construction.py  vtk_test.py
pyradise/: __version__.py  utils.py
pyradise/conversion/: __init__.py  base_conversion.py  configuration.py  (+8 more)
tests/: conftest.py  pytest.ini
(+154 files in other folders)
