[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[project]
name = "pyradise"
version = "0.1.0"
authors = [
  { name="Elias Rüfenacht", email="elias.ruefenacht@unibe.ch" },
]
description = "PyRaDiSe: A Python package for DICOM-RT-based auto-segmentation pipeline development and DICOM-RT data conversion"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
    'Topic :: Scientific/Engineering :: Image Recognition',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries'
]

[project.urls]
"Homepage" = "https://pyradise.readthedocs.io/"
"Bug Tracker" = "https://github.com/ubern-mia/pyradise/issues"